# kedro-local-notify

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: main.yml
kedro_local_notify/: __init__.py  hook.py
tests/: test_kedro_notify.py
